[package]
name = "test_yewdux"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { git = "https://github.com/yewstack/yew" }
gloo-console = "0.1"
maplit = "1.0.2"
yewdux = { git = "https://github.com/intendednull/yewdux.git" }
wasm-logger = "0.2.0"